Cleanup custom command methods