@@ -33,9 +33,9 @@ import net.dv8tion.jda.core.utils.MiscUtil;
 import org.jetbrains.annotations.NotNull;
 
 import java.time.format.DateTimeFormatter;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 @Authors(authors = {
@@ -45,115 +45,94 @@ import java.util.stream.Collectors;
 public class DiscordMethods {
 
     public static Collection<Method> getMethods() {
-        return Arrays.asList(
+        return List.of(
             new Method("user", (env) -> {
-                User u = env.get("user");
+                final User u = env.get("user");
+
                 return u.getName();
-            }, (env, in) -> {
-                if (in[0].equals(""))
-                    return "";
-                List<Member> members = null;
-                Guild g = env.get("guild");
-                if (g != null)
-                    members = FinderUtil.findMembers(in[0], g);
-                if (members == null || members.isEmpty())
-                    throw new ParseException(String.format("Your input `%s` returned no members", in[0]));
-                return members.get(0).getUser().getName();
-            }),
+            },
+                (env, in) -> getMemberFromInput(env, in).getUser().getName()
+            ),
 
             new Method("nick", (env) -> {
-                User u = env.get("user");
-                Guild g = env.get("guild");
+                final User u = env.get("user");
+                final Guild g = env.get("guild");
 
                 if (g.getMember(u) == null) {
                     return u.getAsTag();
                 }
 
                 return g.getMember(u).getEffectiveName();
-            }, (env, in) -> {
-                if (in[0].equals(""))
-                    return "";
-                List<Member> members = null;
-                Guild g = env.get("guild");
-                if (g != null)
-                    members = FinderUtil.findMembers(in[0], g);
-                if (members == null || members.isEmpty())
-                    throw new ParseException(String.format("Your input `%s` returned no members", in[0]));
-                return members.get(0).getEffectiveName();
-            }),
+            },
+                (env, in) -> getMemberFromInput(env, in).getEffectiveName()
+            ),
 
             new Method("discrim", (env) -> {
-                User u = env.get("user");
+                final User u = env.get("user");
+
                 return u.getDiscriminator();
-            }, (env, in) -> {
-                if (in[0].equals(""))
-                    return "";
-                List<Member> members = null;
-                Guild g = env.get("guild");
-                if (g != null)
-                    members = FinderUtil.findMembers(in[0], g);
-                if (members == null || members.isEmpty())
-                    throw new ParseException(String.format("Your input `%s` returned no members", in[0]));
-                return members.get(0).getUser().getDiscriminator();
-            }),
+            },
+                (env, in) -> getMemberFromInput(env, in).getUser().getDiscriminator()
+            ),
 
             new Method("avatar", (env) -> {
-                User u = env.get("user");
+                final User u = env.get("user");
+
                 return u.getEffectiveAvatarUrl() + "?size=2048";
-            }, (env, in) -> {
-                if (in[0].equals(""))
-                    return "";
-                List<Member> members = null;
-                Guild g = env.get("guild");
-                if (g != null)
-                    members = FinderUtil.findMembers(in[0], g);
-                if (members == null || members.isEmpty())
-                    throw new ParseException(String.format("Your input `%s` returned no members", in[0]));
-                return members.get(0).getUser().getEffectiveAvatarUrl() + "?size=2048";
-            }),
+            },
+                (env, in) -> getMemberFromInput(env, in).getUser().getEffectiveAvatarUrl() + "?size=2048"
+            ),
 
             new Method("creation", (env, in) -> {
                 long id;
+
                 try {
                     id = Long.parseUnsignedLong(in[0]);
                 } catch (NumberFormatException ignored) {
                     throw new ParseException(String.format("Your input `%s` is not a valid long id", in[0]));
                 }
+
                 return MiscUtil.getCreationTime(id).format(DateTimeFormatter.RFC_1123_DATE_TIME);
             }),
 
             new Method("userid", (env) -> {
-                User u = env.get("user");
+                final User u = env.get("user");
+
                 return u.getId();
             }),
 
             new Method("atuser", (env) -> {
-                User u = env.get("user");
+                final User u = env.get("user");
+
                 return u.getAsMention();
             }),
 
             new Method("server", (env) -> {
-                Guild guild = env.get("guild");
+                final Guild guild = env.get("guild");
+
                 return guild.getName();
             }),
 
             new Method("serverid", (env) -> {
-                Guild guild = env.get("guild");
+                final Guild guild = env.get("guild");
+
                 return guild.getId();
             }),
 
             new Method("servercount", (env) -> {
-                Guild guild = env.get("guild");
+                final Guild guild = env.get("guild");
+
                 return String.valueOf(guild.getMemberCache().size());
             }),
 
             new Method("servericon", (env) -> {
-                Guild guild = env.get("guild");
+                final Guild guild = env.get("guild");
+
                 return guild.getIconUrl();
             }),
 
             new Method("channel", (env) -> {
-                TextChannel tc = env.get("channel");
+                final TextChannel tc = env.get("channel");
 
                 if (tc == null) {
                     return "";
@@ -161,14 +140,15 @@ public class DiscordMethods {
 
                 return tc.getAsMention();
             }, (env, in) -> {
-                if (in[0].equals(""))
+                if (in[0].equals("")) {
                     return "";
+                }
 
                 return getFirstTextChannel(env, in).getAsMention();
             }),
 
             new Method("channelid", (env) -> {
-                TextChannel tc = env.get("channel");
+                final TextChannel tc = env.get("channel");
 
                 if (tc == null) {
                     return "";
@@ -176,74 +156,45 @@ public class DiscordMethods {
 
                 return tc.getId();
             }, (env, in) -> {
-                if (in[0].equals(""))
+                if (in[0].equals("")) {
                     return "";
+                }
 
                 return getFirstTextChannel(env, in).getId();
             }),
 
-            new Method("randuser", (env) -> {
-                Guild guild = env.get("guild");
-                List<Member> members = guild.getMemberCache().asList();
-                int randNum = (int) Math.round(Math.random() * members.size()) + 1;
-                Member m = members.get(randNum);
-                return m.getEffectiveName();
-            }),
+            new Method("randuser",
+                (env) -> getRandomMember(env).getEffectiveName()
+            ),
 
-            new Method("randatuser", (env) -> {
-                Guild guild = env.get("guild");
-                List<Member> members = guild.getMemberCache().asList();
-                int randNum = (int) Math.round(Math.random() * members.size()) + 1;
-                Member m = members.get(randNum);
-                return m.getAsMention();
-            }),
+            new Method("randatuser",
+                (env) -> getRandomMember(env).getAsMention()
+            ),
 
-            new Method("randonline", (env) -> {
-                Guild guild = env.get("guild");
-                List<Member> members = guild.getMemberCache().stream().filter(it -> it.getOnlineStatus()
-                    .equals(OnlineStatus.ONLINE)).collect(Collectors.toList());
-                if (members.isEmpty()) {
-                    return "";
-                }
-                if (members.size() == 1) {
-                    return members.get(0).getEffectiveName();
-                }
-                int randNum = (int) Math.round(Math.random() * members.size()) + 1;
-                Member m = members.get(randNum);
-                return m.getEffectiveName();
-            }),
+            new Method("randonline",
+                (env) -> getRandomOnlineMember(env).getEffectiveName()
+            ),
 
-            new Method("randatonline", (env) -> {
-                Guild guild = env.get("guild");
-                List<Member> members = guild.getMemberCache().stream().filter(it -> it.getOnlineStatus()
-                    .equals(OnlineStatus.ONLINE)).collect(Collectors.toList());
-                if (members.isEmpty()) {
-                    return "";
-                }
-                if (members.size() == 1) {
-                    return members.get(0).getAsMention();
-                }
-                int randNum = (int) Math.round(Math.random() * members.size()) + 1;
-                Member m = members.get(randNum);
-                return m.getAsMention();
-            }),
+            new Method("randatonline",
+                (env) -> getRandomOnlineMember(env).getAsMention()
+            ),
 
             new Method("randchannel", (env) -> {
-                Guild guild = env.get("guild");
-                List<TextChannel> channels = guild.getTextChannelCache().asList();
-                if (channels.isEmpty()) {
-                    return "";
-                }
+                final Guild guild = env.get("guild");
+                final List<TextChannel> channels = guild.getTextChannels();
+
                 if (channels.size() == 1) {
                     return channels.get(0).getAsMention();
                 }
-                int randNum = (int) Math.round(Math.random() * channels.size()) + 1;
+
+                final int randNum = (int) Math.round(Math.random() * channels.size()) + 1;
+
                 return channels.get(randNum).getAsMention();
             })/*,
 
             new Method("embed", (env, input) -> {
                 try {
-                    JSONObject jsonObject = new JSONObject(input[0]);
+                    final JSONObject jsonObject = new JSONObject(input[0]);
                     jsonObject.put("type", "rich");
                     env.put("embed", jsonObject);
                 }
@@ -257,12 +208,64 @@ public class DiscordMethods {
 
     @NotNull
     private static TextChannel getFirstTextChannel(Environment env, String[] in) throws ParseException {
+        final Guild g = env.get("guild");
         List<TextChannel> channels = null;
-        Guild g = env.get("guild");
-        if (g != null)
+
+        if (g != null) {
             channels = FinderUtil.findTextChannels(in[0], g);
-        if (channels == null || channels.isEmpty())
+        }
+
+        if (channels == null || channels.isEmpty()) {
             throw new ParseException(String.format("Your input `%s` returned no channels", in[0]));
+        }
+
         return channels.get(0);
+    }
+
+    @NotNull
+    private static Member getMemberFromInput(Environment env, String[] in) throws ParseException {
+
+        if (in[0].equals("")) {
+            throw new ParseException("Input for member cannot be empty");
+        }
+
+        List<Member> members = null;
+        final Guild g = env.get("guild");
+
+        if (g != null) {
+            members = FinderUtil.findMembers(in[0], g);
+        }
+
+        if (members == null || members.isEmpty()) {
+            throw new ParseException(String.format("Your input `%s` returned no members", in[0]));
+        }
+
+
+        return members.get(0);
+    }
+
+    private static Member getRandomMember(Environment env) throws ParseException {
+        return getRandomMember(env, (m) -> true);
+    }
+
+    private static Member getRandomOnlineMember(Environment environment) throws ParseException {
+        return getRandomMember(environment, (member) -> member.getOnlineStatus() == OnlineStatus.ONLINE);
+    }
+
+    private static Member getRandomMember(Environment env, Predicate<? super Member> filter) throws ParseException {
+        final Guild guild = env.get("guild");
+        final List<Member> members = guild.getMemberCache().stream().filter(filter).collect(Collectors.toList());
+
+        if (members.isEmpty()) {
+            throw new ParseException("No members found");
+        }
+
+        if (members.size() == 1) {
+            return members.get(0);
+        }
+
+        final int randNum = (int) Math.round(Math.random() * members.size()) + 1;
+
+        return members.get(randNum);
     }
 }
